Link to audio file updated

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class='container ripple'>
         <audio id="gun" preload="auto">
-            <source src="gunshort.m4a" volume="60"></audio>
+            <source src="/assets/media/gun.mp3" volume="60"></audio>
         <div id='frontrow' class="levels">
             <div id="targetone" class="target">
                 <div class="centertarget"></div>
