Trying to make the sound effects work in safari

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
             </div>   
     </div>
     <div class='container ripple'>
-        <audio id="gun" preload="auto">
-            <source src="/assets/media/gun.mp3" volume="60"></audio>
+        <audio id="gun" src="gunshort.m4a" type="audio/m4a"></audio>
         <div id='frontrow' class="levels">
             <div id="targetone" class="target">
                 <div class="centertarget"></div>
