--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             </div>   
     </div>
     <div class='container ripple'>
-        <audio id="gun" src="gunshort.m4a" type="audio/m4a"></audio>
+        <audio preload="auto" id="gun">
+            <source src="gunshort.mp3" type="audio/mpeg">
+        </audio>
         <div id='frontrow' class="levels">
             <div id="targetone" class="target">
                 <div class="centertarget"></div>
