Edited the position of the prestart and score screens

--- a/index.html
+++ b/index.html
@@ -61,7 +61,12 @@
             </div>
         </div>
     </div>
-    <div id="scorescreen" class="hiddenscore">
+    <div id="scorescreen" class="popupScreen hiddenscore">
+        <div>
+            <span class="headerfront">
+            <h1>Carnival Shooting Gallery</h1>
+            </span>    
+        </div>
         <div id="gameScore"></div>
         <div>
             <button id="replay">
@@ -69,8 +74,11 @@
             </button>
         </div>
     </div>
-    <div id="prestart" class="visible">
+    <div id="prestart" class="popupScreen visible">
         <div>
+            <span class="headerfront">
+                <h1>Carnival Shooting Gallery</h1>
+            </span>
             <h3>Instructions to play</h3>
             <p>Simply hit the targets and make them drop as quickly as you can.</p>
             <div class="target instructions">
