Added Signature at the bottom

--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
             </span>
             <h3>Instructions to play</h3>
             <p>Simply hit the targets and make them drop as quickly as you can.</p>
-            <div class="target instructions">
-                <div class="centertarget"></div>
-            </div>
 
-        <p>Click Anywhere to start!</p> 
+        <p>Click Anywhere to start!</p>
+        <div class="targetstart">
+        </div> 
+        <p class="signature">Greg Goodrem - Milestone Project 2</p>
         </div>
     </div>
     <script src="assets/js/script.js"></script>
