Adding different Score values to game targets

--- a/index.html
+++ b/index.html
@@ -69,7 +69,10 @@
             </span>
             <h3>Instructions to play</h3>
             <p>Hit the targets and make them drop as quickly as you can.</p>
-            <p>Double points if you hit the centre!</p>
+            <p>3 points on the Top Row</p>
+            <p>2 points on the Middle Row</p>
+            <p>1 points on the Bottom Row</p>
+            <p>Extra point if you hit the centres!</p>
             <p><b>Click Anywhere to start!</b></p>
         <div class="targetstart tstyle">
         </div> 
