Updated perfect counter

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     </div>
 	<div id='flexbox'>
             <h2 id="perfectScore">0</h2>
+            <p class="perfect">Perfect Shots!</p>
             <h2 id="score">0</h2>
             <div class="counter">
                 <div class="nums">
@@ -69,10 +70,10 @@
             </span>
             <h3>Instructions to play</h3>
             <p>Hit the targets and make them drop as quickly as you can.</p>
-            <p>3 points on the Top Row</p>
-            <p>2 points on the Middle Row</p>
-            <p>1 points on the Bottom Row</p>
-            <p>Extra point if you hit the centres!</p>
+            <p><b>3 points</b> on the Top Row</p>
+            <p><b>2 points</b> on the Middle Row</p>
+            <p><b>1 points</b> on the Bottom Row</p>
+            <p><b>Extra point</b> if you hit the centres!</p>
             <p><b>Click Anywhere to start!</b></p>
         <div class="targetstart tstyle">
         </div> 
