--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.4/howler.js"></script>
     <title>Milestone Project 2 Greg Goodrem</title>
 </head>
 <body>
@@ -94,5 +94,6 @@
         </div>
     </div>
     <script src="assets/js/script.js"></script>
+    <!--<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.js"></script>-->
 </body>
 </html>
