Styling edits regarding score screen and instructions function

--- a/index.html
+++ b/index.html
@@ -88,12 +88,18 @@
         </div>
         <div id="gameScore"></div>
         <div>
+            <div >
+                <h3>Percentage Perfect Hits</h2>
+                <div class="perfectPercentage">%</div>
+            </div>
             <button id="replay">
                 <span>Replay</span>
+            </button>
+            <button id="instructionStart">
+                <span>Instructions</span>
             </button>
         </div>
     </div>
     <script src="assets/js/script.js"></script>
-    <!--<script type='text/javascript' src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.js"></script>-->
 </body>
 </html>
