Introduced Target, Perfect, shots taken tallys

--- a/index.html
+++ b/index.html
@@ -79,18 +79,20 @@
         </div> 
         <p class="signature">Greg Goodrem - Milestone Project 2</p>
         </div>
+        
     </div>
     <div id="scorescreen" class="popupScreen hiddenscore">
         <div>
-            <span class="headerfront">
+            <span class="headerfront header">
             <h1>Carnival Shooting Gallery</h1>
             </span>    
         </div>
         <div id="gameScore"></div>
         <div>
-            <div >
-                <h3>Percentage Perfect Hits</h2>
-                <div class="perfectPercentage">%</div>
+            <div class="scores">
+                <h3 id="perfectTally">%</h3>
+                <h3 id="shotTally">%</h3>
+                <h3 id="targetTally">%</h3>
             </div>
             <button id="replay">
                 <span>Replay</span>
