Readme updated not finished & HTML error changes

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.4/howler.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.4/howler.js"></script>
     <title>Milestone Project 2 Greg Goodrem</title>
 </head>
 <body>
     <div class="header">
-        <span><h1>Carnival Shooting Gallery</h1></span>
+        <h1>Carnival Shooting Gallery</h1>
     </div>
 	<div id='flexbox'>
             <h2 id="perfectScore">0</h2>
@@ -58,16 +58,14 @@
             </div>
         </div>
         <div id='rearrow' class="levels">
-            <div id="targetthree"class="target tstyle">
+            <div id="targetthree" class="target tstyle">
                 <div class="centertarget"></div>
             </div>
         </div>
     </div> 
     <div id="prestart" class="popupScreen visible">
         <div>
-            <span class="header">
-                <h1>Carnival Shooting Gallery</h1>
-            </span>
+            <h1 class="header">Carnival Shooting Gallery</h1>
             <h3>Instructions to play</h3>
             <p>Hit the targets and make them drop as quickly as you can.</p>
             <p><b>3 points</b> on the Top Row</p>
@@ -83,9 +81,7 @@
     </div>
     <div id="scorescreen" class="popupScreen hiddenscore">
         <div>
-            <span class="headerfront header">
-            <h1>Carnival Shooting Gallery</h1>
-            </span>    
+            <h1 class="headerfront header">Carnival Shooting Gallery</h1>    
         </div>
         <div id="gameScore"></div>
         <div>
