--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
     <div id="scorescreen" class="popupScreen hiddenscore">
         <div>
-            <h1 class="headerfront header">Carnival Shooting Gallery</h1>    
+            <h1 class="header">Carnival Shooting Gallery</h1>    
         </div>
         <div id="gameScore"></div>
         <div>
