--- a/index.html
+++ b/index.html
@@ -17,12 +17,15 @@
 	<div id='flexbox'>
             <h2 id="perfectScore">0</h2>
             <p class="perfect">Perfect Shots!</p>
+            <h2 id="shotTallyCurrent">0</h2>  
+            <p class="shotsTaken">Shots Taken</p>
             <h2 id="score">0</h2>
+            <p class="timeRemaining">Time Remaining</p>
             <div class="counter">
                 <div class="nums">
                       <span id="numbers" class="">20</span>
                       <span>19</span>
-                      <span>18</span>
+                      <span>18</span> 
                       <span>17</span>
                       <span>16</span>
                       <span>15</span>
@@ -42,7 +45,7 @@
                       <span>1</span>
                 </div>
                 <h4>Shoot to Start!</h4>
-            </div>   
+            </div> 
     </div>
     <div class='container ripple'>
         <audio preload="auto" id="gun">
@@ -68,7 +71,7 @@
         <div>
             <h1 class="header">Carnival Shooting Gallery</h1>
             <h3>Instructions to play</h3>
-            <p>Hit the targets and make them drop as quickly as you can.</p>
+            <p>Aim & Shoot Targets, make as many as possible drop in <b>20 secs</b></p>
             <p><b>3 points</b> on the Top Row</p>
             <p><b>2 points</b> on the Middle Row</p>
             <p><b>1 points</b> on the Bottom Row</p>
@@ -88,7 +91,7 @@
         <div>
             <div class="scores">
                 <h3 id="perfectTally">%</h3>
-                <h3 id="shotTally">%</h3>
+                <h3 id="shotTallyID">%</h3>
                 <h3 id="targetTally">%</h3>
             </div>
             <button id="replay">
