Reorder of my h2 and h3

--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
             </div> 
     </div>
     <div class='container ripple'>
-        <audio preload="auto" id="gun">
-            <source src="gunshort.mp3" type="audio/mpeg">
-        </audio>
         <div id='frontrow' class="levels">
             <div id="targetone" class="target tstyle">
                 <div class="centertarget"></div>
@@ -73,7 +70,7 @@
     <div id="prestart" class="popupScreen visible">
         <div>
             <h1 class="header">Carnival Shooting Gallery</h1>
-            <h3>Instructions to play</h3>
+            <h2 class="instruction">Instructions to play</h2>
             <p>Aim & Shoot Targets, make as many as possible drop in <b>20 secs</b></p>
             <p><b>3 points</b> on the Top Row</p>
             <p><b>2 points</b> on the Middle Row</p>
