--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <div>
             <h1 class="header">Carnival Shooting Gallery</h1>    
         </div>
-        <div id="gameScore"></div>
+        <h2 id="gameScore"></h2>
         <div>
             <div class="scores">
                 <h3 id="perfectTally">%</h3>
