--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                       <span>2</span>
                       <span>1</span>
                 </div>
-                <h4>Shoot to Start!</h4>
+                <p class="shoot">SHOOT!!!!</p>
             </div> 
     </div>
     <div class='container ripple'>
